# kollos

./: README
etc/libmarpa/: License.pm
work/ac/: Makefile.am  README  configure.ac
work/ac/lua/: Makefile.am
work/ac/lua_test/: Makefile.am
work/ac_doc/: Makefile.am  README  configure.ac
work/ami/: Makefile  marpa_ami.w
work/avl/: marpa_avl.c  marpa_avl.h
work/dev/: Makefile  legacy.w  marpa.w
work/lua/: README  make_src.pl
work/notes/: README.INSTALL
work/obs/: marpa_obs.c  marpa_obs.h
work/public/: Makefile  texi2err.pl  texi2event.pl  texi2step.pl
work/shared/: copyright_page_license.w  license.c
work/slif/: Makefile  marpa_slif.w
work/tavl/: Makefile
work/test/dev/: Makefile.am  configure.ac
work/win32/: Makefile.win32  do_config_h.pl
